[package]
name = "ptrace"
version = "0.1.0"
authors = ["Torrie Fischer <torrie@ripple.com>"]
description = "Rust bindings for the POSIX ptrace API"
repository = "http://github.com/codius/rust-ptrace"
license = "MIT"
readme = "README.md"

[lib]
name = "ptrace"

[dependencies]
posix-ipc={git="https://github.com/GaveUp/rust-posix-ipc.git"}
num="0.1.30"
nix="0.4.2"
enum_primitive="0.1.0"
libc="0.2.4"
